<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_low_quality"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/discover_low_quality"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/add_post_low_quality"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification_low_quality"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_low_quality"
        android:title="@string/title_profile" />

</menu>
