<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/fragment_home">


    //TODO: make folder for fragment classes and make the classes
    <fragment
        android:id="@+id/fragment_home"
        android:name="android.technion.bottomnav.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/fragment_discover"
        android:name="android.technion.bottomnav.ui.home.HomeFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/discover_fragment" />

    <fragment
        android:id="@+id/fragment_notifications"
        android:name="android.technion.bottomnav.ui.home.HomeFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/notification_fragment" />

    <fragment
        android:id="@+id/fragment_profile"
        android:name="android.technion.bottomnav.ui.dashboard.DashboardFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />


</navigation>
